tests/baselines/reference/undeclaredVarEmit.errors.txt
tests/cases/compiler/undeclaredVarEmit.ts(1,1): error TS7028: Unused label.
tests/cases/compiler/undeclaredVarEmit.ts(1,4): error TS2693: 'number' only refers to a type, but is being used as a value here.


==== tests/cases/compiler/undeclaredVarEmit.ts (2 errors) ====
    f: number;
    ~
!!! error TS7028: Unused label.
       ~~~~~~
!!! error TS2693: 'number' only refers to a type, but is being used as a value here.